# ProjectV

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_STYLE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SOURCES.md
.cache/clangd/index/: _fixes.hpp.8C6558ECB7842B2A.idx  _vectorize.hpp.44C5A9A9F7D2BECE.idx  abi_macros.hpp.B1CAB791A4492720.idx  adl_serializer.hpp.FB14AF569DC2BBBA.idx  ansicolor_sink-inl.h.EC8CF1E2A40EF7B9.idx  ansicolor_sink.h.E50E18A651E9580D.idx  application.h.47F41CEBE689E73A.idx  async.cpp.45BFD1E8D18797DC.idx  async.h.A102AEA3ED2F0028.idx  async_logger-inl.h.55853908596BE6A6.idx  async_logger.h.59C5D035F45ABA78.idx  backtracer-inl.h.F888021A68B748CC.idx  backtracer.h.898EAD9D5972AA1D.idx  base.h.B0D6303C36C60D32.idx  base_sink-inl.h.73D7E15A707F31E9.idx  base_sink.h.8405E56AA43A8DE9.idx  basic_file_sink-inl.h.38D1643E899155DD.idx  basic_file_sink.h.E63FD1D35C6D3D8D.idx  begin.hpp.EC0E3B68AC5A760D.idx  binary_reader.hpp.E9F9410D0A313897.idx  binary_writer.hpp.EF6D4A5E93C3F9D2.idx  bundled_fmtlib_format.cpp.E95EC511E3DC64C6.idx  byte_container_with_subtype.hpp.95F42450BB9F20D1.idx  camera.h.48D60B1285B2735B.idx  cfg.cpp.8831EA594CDA0C9A.idx  circular_q.h.234A2CED444AA5B4.idx  color.h.EFE86B42ACA46D39.idx  color_sinks.cpp.383C62ECF89F930E.idx  common-inl.h.4C1A9CD5AFBAFBFE.idx  common.h.01DB529F88612175.idx  common.hpp.8104FE5CCC14E41D.idx  compute_common.hpp.BB8D840FC49472DA.idx  compute_vector_decl.hpp.565DCAE1A07DE966.idx  compute_vector_relational.hpp.732956515D523AAE.idx  console_globals.h.C8A925BCD9AA7D59.idx  constants.hpp.5748819873CEE5E7.idx  constants.inl.C42CB4564295FF3E.idx  cpp_future.hpp.D2DE2C6D731A5E2F.idx  detected.hpp.1A39473460889925.idx  dual_quaternion.hpp.53D9FCDCD465315D.idx  (+291 more)
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SOURCES.md
docs/data_structures/: octree_data_structure.md  renderer.md  scene_data_structure.md  shaders.md  textures.md  tree64_data_structure.md  voxel_type_data_structure.md
docs/examples/GrowingAndShrinkingBall/: Makefile  TestOctree  main.cpp
docs/examples/GrowingAndShrinkingBall/shaders/: fragmentShader.frag  vertexShader.glsl
docs/examples/ObjVoxelizer/: Makefile  README.md  main.cpp
docs/examples/ObjVoxelizer/include/: CLI.hpp
docs/examples/ObjVoxelizer/testScene/: headers.json
docs/examples/Path tracer With ProjectV/: main.cpp
docs/examples/Path tracer With ProjectV/shaders/: fragmentShader.frag  vertexShader.glsl
docs/examples/PathTracer/: Makefile  README.md  compTree64.sh  main.cpp
docs/examples/PathTracer/SponzaScene/: headers.json
docs/examples/PathTracer/include/: noiseUse.h
docs/examples/PathTracer/tree64Renderer/: render.json  resources.json
docs/examples/PathTracer/tree64Renderer/pathTracerShaders/: accumulate.frag  combine.frag  denoise_ao_gi.frag  path_trace.frag  pjv_utils_DDA.sc  post_and_display.frag  varying.def.sc  vs_quad.sc
docs/examples/Simple Renderer/: Makefile  main.cpp  sources
docs/examples/Simple Renderer/Sibenik-Scene/: headers.json
docs/examples/Simple Renderer/shaders/: fragmentShader.frag
docs/examples/SimpleOctreeGen/: Makefile  main.cpp
docs/examples/TerrainGenerationExample/: CMakeLists.txt  README.md  main.cpp
docs/examples/TerrainGenerationExample/SceneTest/: headers.json
docs/examples/TerrainGenerationExample/shaders/: copyColors.frag
include/: camera.h  core.h  graphics.h  utils.h
include/core/: core.md  ecs.h  log.h  math.h
include/data_structures/: application.h  camera.h  color.h  constructedRenderer.h  dependencyGraph.h  framebuffer.h  gpuData.h  nodeStructure.h  posTexVertex.h  renderInstance.h  rendererSpecification.h  resources.h  scene.h  shader.h  texture.h  uniform.h  voxel.h
include/graphics/: construct_render.h  disk_io.h  fbo.h  gpu_interface.h  graphics.md  manage_resources.h  perform_renderer.h  render.h  render_instance.h  render_specification.h  renderer_loader.h  resource_management.h  scene.h  shader.h  type_mapping.h  uniforms.h  user_input.h  window.h
include/utils/: lod.h  utils.md  voxel_io.h  voxel_management.h  voxel_math.h
shaders/: fragmentShader.frag  postProcessing.frag  vertexShader.glsl
src/: core.cpp  graphics.cpp  utils.cpp
src/core/: ecs.cpp  math.cpp
src/graphics/: construct_render.cpp  disk_io.cpp  fbo.cpp  gpu_interface.cpp  manage_resources.cpp  perform_renderer.cpp  render.cpp  render_instance.cpp  render_specification.cpp  renderer_loader.cpp  resource_management.cpp  scene.cpp  shader.cpp  type_mapping.cpp  uniforms.cpp  user_input.cpp  window.cpp
src/utils/: lod.cpp  voxel_io.cpp  voxel_management.cpp  voxel_math.cpp
